# dslite2svd

crates/tm4c123x/: Cargo.toml
crates/tm4c123x/src/: lib.rs
crates/tm4c129x/: Cargo.toml
crates/tm4c129x/src/: lib.rs
