[package]
name = "tm4c123x"
version = "0.9.0"
authors = ["whitequark <whitequark@whitequark.org>"]
description = "Peripheral access API for TI TM4C123x microcontrollers"
documentation = "https://docs.rs/tm4c123x"
repository = "https://github.com/m-labs/dslite2svd"
keywords = ["arm", "cortex-m", "tm4c", "tiva-c"]
categories = ["embedded"]
license = "0BSD"

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.7.6"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7.2"

[features]
rt = ["cortex-m-rt/device"]
